syntax = "proto3";

package yarn;

import "google/protobuf/timestamp.proto";

service YarnApi {
    rpc insertReqLive(stream Live) returns (TaskResult);
    rpc insertReqChannel(stream Channel) returns (TaskResult);
    rpc insertReqVTuber(stream Liver) returns (TaskResult);
    rpc insertReqAffiliation(stream Affiliation) returns (TaskResult);
}

message Live {
    string VideoId = 1;
    optional string ChannelId = 2;
    string Title = 3;
    string Description = 4;
    optional google.protobuf.Timestamp PublishedAt = 6;
    optional google.protobuf.Timestamp UpdatedAt = 7;
    optional google.protobuf.Timestamp WillStartAt = 8; // status in upcoming
    optional google.protobuf.Timestamp StartedAt = 9; // status in live
    sint64 override_at = 10;
}

message Channel {
    string ChannelId = 1;
    optional sint64 LiverId = 2;
    string LogoUrl = 3;
    google.protobuf.Timestamp PublishedAt = 4;
    string Description = 5;
    sint64 override_at = 6;
}

message Liver {
    sint64 LiverId = 1;
    string Name = 2;
    optional sint64 AffiliationId = 3;
    sint64 override_at = 4;
}

message Affiliation {
    sint64 AffiliationId = 1;
    string Name = 2;
    sint64 override_at = 3;
}


message TaskResult {
    string Message = 1;
}